fix issue with font size in the answer being too big

--- a/app/assets/stylesheets/components/article_body/_collapsible.scss
+++ b/app/assets/stylesheets/components/article_body/_collapsible.scss
@@ -75,6 +75,10 @@ $inline-callout-link-color: $green-leaf;
       stroke: $inline-callout-link-color;
     }
   }
+
+  p:first-of-type {
+    @include font-size(18);
+  }
 }
 
 .plus-icon {
